--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -12,6 +12,15 @@
                 {% if recipe.description %}
                 <p class="recipe-detail__description">{{ recipe.description }}</p>
                 {% endif %}
+                {% if recipe.tags %}
+                <div class="recipe-tags">
+                    {% for tag in recipe.tags %}
+                    <span class="badge badge--tag">
+                        {{ tag_labels.get(tag, tag) if tag_labels else tag }}
+                    </span>
+                    {% endfor %}
+                </div>
+                {% endif %}
                 {% if current_user and recipe.user_id == current_user.id %}
                 <div class="recipe-detail__actions">
                     <a
