--- a/templates/base.html
+++ b/templates/base.html
@@ -11,11 +11,20 @@
     <div class="container header__inner">
         <div class="logo">FoodPlanner</div>
         <nav class="nav">
-            <a href="/" class="nav__link nav__link--active">Главная</a>
+            {% set current_path = request.url.path %}
+            <a
+                href="/"
+                class="nav__link {% if current_path == '/' %}nav__link--active{% endif %}"
+                >Главная</a
+            >
             {% if current_user %}
             <a href="{{ url_for('recipes_new') }}" class="nav__link">Создать рецепт</a>
             {% endif %}
-            <a href="#" class="nav__link">Рецепты</a>
+            <a
+                href="{{ url_for('recipes_list') }}"
+                class="nav__link {% if current_path.startswith('/recipes') %}nav__link--active{% endif %}"
+                >Рецепты</a
+            >
             <a href="#" class="nav__link">Планы питания</a>
             <a href="#" class="nav__link">Поддержка</a>
             <a href="#" class="nav__link">О сервисе</a>
