--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
                 >Рецепты</a
             >
             <a
-                href="{{ url_for('menu_builder') }}"
+                href="{{ url_for('menu_list') }}"
                 class="nav__link {% if current_path.startswith('/menu') %}nav__link--active{% endif %}"
                 >Планы питания</a
             >
