--- a/templates/index.html
+++ b/templates/index.html
@@ -87,11 +87,7 @@
         <div class="popular__grid">
             {% for recipe in latest_recipes %}
             <article class="recipe-card">
-                <img
-                    src="{{ recipe.image_path or 'https://via.placeholder.com/300x200?text=Recipe' }}"
-                    alt="{{ recipe.title }}"
-                    class="recipe-card__image"
-                />
+                <img src="{{ cover_url(recipe) }}" alt="{{ recipe.title }}" class="recipe-card__image" />
                 <div class="recipe-card__body">
                     <div class="recipe-card__top">
                         <h3 class="recipe-card__title">{{ recipe.title }}</h3>
