--- a/templates/recipes_list.html
+++ b/templates/recipes_list.html
@@ -71,7 +71,7 @@
                             class="btn btn--small btn--primary"
                             >Открыть</a
                         >
-                        {% if current_user and recipe.user_id == current_user.id %}
+                        {% if current_user and (recipe.user_id == current_user.id or current_user.is_admin) %}
                         <a
                             href="{{ url_for('recipes_edit', recipe_id=recipe.id) }}"
                             class="btn btn--small btn--ghost"
